--- a/tests.html
+++ b/tests.html
@@ -338,7 +338,131 @@ $(document).ready(function () {
 
 <pre class="r"><code>jalsh &lt;- jalsh[index(r.xts)]
 rfr &lt;- rfr[index(r.xts)]
-# betas &lt;- lm(r.xts ~ jalsh - rfr)</code></pre>
+betas &lt;- lm(r.xts ~ jalsh - rfr)
+summary(betas)</code></pre>
+<pre><code>## Response high :
+## 
+## Call:
+## lm(formula = high ~ jalsh - rfr)
+## 
+## Residuals:
+##             high
+## Min    -0.233058
+## 1Q     -0.021790
+## Median  0.000698
+## 3Q      0.025253
+## Max     0.272967
+## 
+## Coefficients:
+##             Estimate Std. Error t value            Pr(&gt;|t|)    
+## (Intercept) -0.00984    0.00332   -2.97              0.0033 ** 
+## jalsh        1.34923    0.07062   19.11 &lt;0.0000000000000002 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 0.0493 on 227 degrees of freedom
+## Multiple R-squared:  0.617,  Adjusted R-squared:  0.615 
+## F-statistic:  365 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
+## 
+## 
+## Response port2 :
+## 
+## Call:
+## lm(formula = port2 ~ jalsh - rfr)
+## 
+## Residuals:
+##            port2
+## Min    -0.097286
+## 1Q     -0.017033
+## Median -0.000744
+## 3Q      0.014905
+## Max     0.117908
+## 
+## Coefficients:
+##             Estimate Std. Error t value            Pr(&gt;|t|)    
+## (Intercept)  0.00284    0.00203     1.4                0.16    
+## jalsh        0.80172    0.04324    18.5 &lt;0.0000000000000002 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 0.0302 on 227 degrees of freedom
+## Multiple R-squared:  0.602,  Adjusted R-squared:  0.601 
+## F-statistic:  344 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
+## 
+## 
+## Response port3 :
+## 
+## Call:
+## lm(formula = port3 ~ jalsh - rfr)
+## 
+## Residuals:
+##            port3
+## Min    -0.087755
+## 1Q     -0.014213
+## Median -0.000476
+## 3Q      0.016173
+## Max     0.096997
+## 
+## Coefficients:
+##             Estimate Std. Error t value            Pr(&gt;|t|)    
+## (Intercept)  0.00479    0.00174    2.75              0.0064 ** 
+## jalsh        0.65901    0.03701   17.81 &lt;0.0000000000000002 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 0.0258 on 227 degrees of freedom
+## Multiple R-squared:  0.583,  Adjusted R-squared:  0.581 
+## F-statistic:  317 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
+## 
+## 
+## Response port4 :
+## 
+## Call:
+## lm(formula = port4 ~ jalsh - rfr)
+## 
+## Residuals:
+##          port4
+## Min    -0.1150
+## 1Q     -0.0169
+## Median  0.0011
+## 3Q      0.0150
+## Max     0.0913
+## 
+## Coefficients:
+##             Estimate Std. Error t value            Pr(&gt;|t|)    
+## (Intercept)  0.00568    0.00173    3.29              0.0012 ** 
+## jalsh        0.48188    0.03674   13.12 &lt;0.0000000000000002 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 0.0257 on 227 degrees of freedom
+## Multiple R-squared:  0.431,  Adjusted R-squared:  0.429 
+## F-statistic:  172 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
+## 
+## 
+## Response low :
+## 
+## Call:
+## lm(formula = low ~ jalsh - rfr)
+## 
+## Residuals:
+##             low
+## Min    -0.11167
+## 1Q     -0.01210
+## Median  0.00238
+## 3Q      0.01157
+## Max     0.05016
+## 
+## Coefficients:
+##             Estimate Std. Error t value             Pr(&gt;|t|)    
+## (Intercept)  0.00571    0.00141    4.05             0.000069 ***
+## jalsh        0.38161    0.02997   12.73 &lt; 0.0000000000000002 ***
+## ---
+## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## 
+## Residual standard error: 0.0209 on 227 degrees of freedom
+## Multiple R-squared:  0.417,  Adjusted R-squared:  0.414 
+## F-statistic:  162 on 1 and 227 DF,  p-value: &lt;0.0000000000000002</code></pre>
 
 
 
