--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Gidon Nerwich 1476465 and Brigitte Winterstein 2401298" />
 
+<meta name="date" content="2020-09-16" />
 
 <title>2020 Honours R Research Project</title>
 
@@ -318,7 +319,11 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="tests.html">Tests</a>
+  <a href="tests.html">
+    <span class="fa fa-calculator"></span>
+     
+    Tests
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -334,11 +339,13 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">2020 Honours R Research Project</h1>
 <h4 class="author">Gidon Nerwich 1476465 and Brigitte Winterstein 2401298</h4>
+<h4 class="date">16 September 2020</h4>
 
 </div>
 
 
 <p>Gidon Nerwich and Brigitte Winterstein R research project</p>
+<p>This document is a collection of webpages that detail the steps taken to conduct our research. The research was implemented in R and as a result, the main focus of this document is to show the R code used to get the results reported in our research report.</p>
 
 
 
