--- a/returns.html
+++ b/returns.html
@@ -317,7 +317,11 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="tests.html">Tests</a>
+  <a href="tests.html">
+    <span class="fa fa-calculator"></span>
+     
+    Tests
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
