--- a/tests.html
+++ b/tests.html
@@ -317,7 +317,11 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="tests.html">Tests</a>
+  <a href="tests.html">
+    <span class="fa fa-calculator"></span>
+     
+    Tests
+  </a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -336,133 +340,251 @@ $(document).ready(function () {
 </div>
 
 
-<pre class="r"><code>jalsh &lt;- jalsh[index(r.xts)]
-rfr &lt;- rfr[index(r.xts)]
-betas &lt;- lm(r.xts ~ jalsh - rfr)
-summary(betas)</code></pre>
-<pre><code>## Response high :
-## 
-## Call:
-## lm(formula = high ~ jalsh - rfr)
-## 
-## Residuals:
-##             high
-## Min    -0.233058
-## 1Q     -0.021790
-## Median  0.000698
-## 3Q      0.025253
-## Max     0.272967
-## 
-## Coefficients:
-##             Estimate Std. Error t value            Pr(&gt;|t|)    
-## (Intercept) -0.00984    0.00332   -2.97              0.0033 ** 
-## jalsh        1.34923    0.07062   19.11 &lt;0.0000000000000002 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.0493 on 227 degrees of freedom
-## Multiple R-squared:  0.617,  Adjusted R-squared:  0.615 
-## F-statistic:  365 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
-## 
-## 
-## Response port2 :
-## 
-## Call:
-## lm(formula = port2 ~ jalsh - rfr)
-## 
-## Residuals:
-##            port2
-## Min    -0.097286
-## 1Q     -0.017033
-## Median -0.000744
-## 3Q      0.014905
-## Max     0.117908
-## 
-## Coefficients:
-##             Estimate Std. Error t value            Pr(&gt;|t|)    
-## (Intercept)  0.00284    0.00203     1.4                0.16    
-## jalsh        0.80172    0.04324    18.5 &lt;0.0000000000000002 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.0302 on 227 degrees of freedom
-## Multiple R-squared:  0.602,  Adjusted R-squared:  0.601 
-## F-statistic:  344 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
-## 
-## 
-## Response port3 :
-## 
-## Call:
-## lm(formula = port3 ~ jalsh - rfr)
-## 
-## Residuals:
-##            port3
-## Min    -0.087755
-## 1Q     -0.014213
-## Median -0.000476
-## 3Q      0.016173
-## Max     0.096997
-## 
-## Coefficients:
-##             Estimate Std. Error t value            Pr(&gt;|t|)    
-## (Intercept)  0.00479    0.00174    2.75              0.0064 ** 
-## jalsh        0.65901    0.03701   17.81 &lt;0.0000000000000002 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.0258 on 227 degrees of freedom
-## Multiple R-squared:  0.583,  Adjusted R-squared:  0.581 
-## F-statistic:  317 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
-## 
-## 
-## Response port4 :
-## 
-## Call:
-## lm(formula = port4 ~ jalsh - rfr)
-## 
-## Residuals:
-##          port4
-## Min    -0.1150
-## 1Q     -0.0169
-## Median  0.0011
-## 3Q      0.0150
-## Max     0.0913
-## 
-## Coefficients:
-##             Estimate Std. Error t value            Pr(&gt;|t|)    
-## (Intercept)  0.00568    0.00173    3.29              0.0012 ** 
-## jalsh        0.48188    0.03674   13.12 &lt;0.0000000000000002 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.0257 on 227 degrees of freedom
-## Multiple R-squared:  0.431,  Adjusted R-squared:  0.429 
-## F-statistic:  172 on 1 and 227 DF,  p-value: &lt;0.0000000000000002
-## 
-## 
-## Response low :
-## 
-## Call:
-## lm(formula = low ~ jalsh - rfr)
-## 
-## Residuals:
-##             low
-## Min    -0.11167
-## 1Q     -0.01210
-## Median  0.00238
-## 3Q      0.01157
-## Max     0.05016
-## 
-## Coefficients:
-##             Estimate Std. Error t value             Pr(&gt;|t|)    
-## (Intercept)  0.00571    0.00141    4.05             0.000069 ***
-## jalsh        0.38161    0.02997   12.73 &lt; 0.0000000000000002 ***
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
-## 
-## Residual standard error: 0.0209 on 227 degrees of freedom
-## Multiple R-squared:  0.417,  Adjusted R-squared:  0.414 
-## F-statistic:  162 on 1 and 227 DF,  p-value: &lt;0.0000000000000002</code></pre>
+<p>In the final section, we test to see if the returns of the portfolios are statistically significant. In other words, are the returns significant even after adjusting for risk as measured by the capm?</p>
+<p>To test this, we first need to find portfolio betas.</p>
+<pre class="r"><code>allRegData &lt;- data.frame(sweep(coredata(r.xts), 1, coredata(rfr)), RM = coredata(jalsh) - coredata(rfr))[-1,]
+
+betas &lt;- matrix(NA, nrow = nrow(r.xts)-12, ncol = ncol(r.xts))
+
+for (i in 1:ncol(betas)) {
+  betas[,i] &lt;- rollapply(zoo(allRegData[,c(i, 6)]),
+                         width=12,
+                         FUN = function(Z) 
+                         { 
+                           t = lm(formula=Z[,1]~RM, data = as.data.frame(Z), na.rm=T); 
+                           return(t$coef) 
+                         },
+                         by.column=FALSE, align=&quot;right&quot;)[,2, drop = FALSE]
+}</code></pre>
+<p>The code above creates rolling 12 month betas for each of the portfolios. First we define a data frame that holds our data. The dataframe contains return premiums of the portfolios and of the market. Then we iterate over each column in the dataframe to calculate rolling betas.</p>
+<p>To test the return significance of the portfolios, we regress the monthly returns on the portfolio betas. If the returns from the portfolios are commensurate with the risk (i.e beta) of the portfolio, then the intercept term should not be statistically significant.</p>
+<pre class="r"><code>alphas &lt;- lapply(r.xts[-c(1:12)], function(x, d) lm(x ~ d), betas)</code></pre>
+<p>We use stargazer to report the results. We don’t print the initial stargazer output, as there are a couple of things that need changing. So to save the output <em>and</em> prevent the output from being printed to the console, we use <code>capture.output</code> to save the output quietly.</p>
+<p>We then use <code>gsub()</code> to rename the labels of the high and low volatility portfolios, so that the result is clear. The second reason we save the stargazer output first is because we want to add a css class for additional styling. In this case, we want the table to fill the width of the container.</p>
+<pre class="r"><code>stargazer(alphas$high, alphas$port2, alphas$port3, alphas$port4, alphas$low,  type = &quot;html&quot;, out = paste0(getwd(), &quot;/Output/results.html&quot;), summary = F, rownames = T, style = &quot;qje&quot; , omit = paste0(&quot;d&quot;, 1:5), dep.var.labels = colnames(r.xts))</code></pre>
+<pre class="r"><code>output &lt;- capture.output(stargazer(alphas$high, alphas$port2, alphas$port3, alphas$port4, alphas$low,  type = &quot;html&quot;, out = paste0(getwd(), &quot;/Output/results.html&quot;), summary = F, rownames = T, style = &quot;qje&quot; , omit = paste0(&quot;d&quot;, 1:5), dep.var.labels = &quot;Volatility Portfolio&quot;))
+
+output &lt;- gsub(&quot;\\(1\\)&quot;, &quot;high&quot;, output)
+output &lt;- gsub(&quot;\\(5\\)&quot;, &quot;low&quot;, output)
+output &lt;- gsub(&quot;&lt;table&quot;, &quot;&lt;table class = &#39;stargazer&#39;&quot;, output)
+cat(output)</code></pre>
+<table class="stargazer" style="text-align:center">
+<tr>
+<td colspan="6" style="border-bottom: 1px solid black">
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td colspan="5">
+Volatility Portfolio
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td>
+high
+</td>
+<td>
+(2)
+</td>
+<td>
+(3)
+</td>
+<td>
+(4)
+</td>
+<td>
+low
+</td>
+</tr>
+<tr>
+<td colspan="6" style="border-bottom: 1px solid black">
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+Constant
+</td>
+<td>
+0.028
+</td>
+<td>
+0.035<sup>**</sup>
+</td>
+<td>
+0.036<sup>**</sup>
+</td>
+<td>
+0.032<sup>***</sup>
+</td>
+<td>
+0.022<sup>**</sup>
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td>
+(0.027)
+</td>
+<td>
+(0.017)
+</td>
+<td>
+(0.014)
+</td>
+<td>
+(0.012)
+</td>
+<td>
+(0.009)
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+<em>N</em>
+</td>
+<td>
+217
+</td>
+<td>
+217
+</td>
+<td>
+217
+</td>
+<td>
+217
+</td>
+<td>
+217
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+R<sup>2</sup>
+</td>
+<td>
+0.022
+</td>
+<td>
+0.018
+</td>
+<td>
+0.027
+</td>
+<td>
+0.026
+</td>
+<td>
+0.016
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+Adjusted R<sup>2</sup>
+</td>
+<td>
+-0.001
+</td>
+<td>
+-0.006
+</td>
+<td>
+0.003
+</td>
+<td>
+0.003
+</td>
+<td>
+-0.007
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+Residual Std. Error (df = 211)
+</td>
+<td>
+0.077
+</td>
+<td>
+0.047
+</td>
+<td>
+0.039
+</td>
+<td>
+0.034
+</td>
+<td>
+0.027
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+F Statistic (df = 5; 211)
+</td>
+<td>
+0.939
+</td>
+<td>
+0.755
+</td>
+<td>
+1.150
+</td>
+<td>
+1.110
+</td>
+<td>
+0.686
+</td>
+</tr>
+<tr>
+<td colspan="6" style="border-bottom: 1px solid black">
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+<em>Notes:</em>
+</td>
+<td colspan="5" style="text-align:right">
+<sup>***</sup>Significant at the 1 percent level.
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td colspan="5" style="text-align:right">
+<sup>**</sup>Significant at the 5 percent level.
+</td>
+</tr>
+<tr>
+<td style="text-align:left">
+</td>
+<td colspan="5" style="text-align:right">
+<sup>*</sup>Significant at the 10 percent level.
+</td>
+</tr>
+</table>
+<p></br></p>
+<p>As you can see from the results above, a high volatility portfolio does not produce statistically significant alphas, while the rest do. It is counterintuitive that portfolios with the lowest risk produce the most returns. Indeed, this a puzzle, which is at odds with the basic tenets of finance.</p>
 
 
 
