--- a/returns.html
+++ b/returns.html
@@ -323,6 +323,13 @@ $(document).ready(function () {
     Tests
   </a>
 </li>
+<li>
+  <a href="diagnostics.html">
+    <span class="fa fa-diagnoses"></span>
+     
+    Diagnostics
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
