--- a/setup.html
+++ b/setup.html
@@ -310,6 +310,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="returns.html">
+    <span class="fa fa-chart-line"></span>
+     
+    Portfolio Returns
+  </a>
+</li>
+<li>
   <a href="tests.html">
     <span class="fa fa-calculator"></span>
      
